# Langgraph-

./: README.md  langgraph_mock_interview_q1_q5.html
Practice/: Day1_Langgraph.py  Day2_State_Management.py  Day3_Conditional_Edges.py  Day4_Tool_Calling_Agents.py  README.md  WithAndWithOutTypedDict.py  first_Langgraph.ipynb  pyproject.toml
Practice/app/code/: First_Lang.ipynb
