[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
]
